@@ -279,7 +279,7 @@ vpr::DebugOutputGuard dbg_output(gadgetDBG_INPUT_MGR, vprDBG_STATE_LVL,
       resetAllDevicesAndProxies();
       updateAllDevices();                             // Update all the input data
       updateAllProxies();                             // Update all the input data
-      BaseDeviceInterface::refreshAllDevices();      // Refresh all the device interface handles
+      BaseDeviceInterface::refreshAllInterfaces();    // Refresh all the device interface handles
       vprDEBUG(gadgetDBG_INPUT_MGR,vprDBG_STATE_LVL)
          << "Updated all devices" << std::endl << vprDEBUG_FLUSH;
    }
@@ -336,7 +336,7 @@ vpr::DebugOutputGuard dbg_output(gadgetDBG_INPUT_MGR, vprDBG_STATE_LVL,
       resetAllDevicesAndProxies();
       updateAllDevices();                             // Update all the input data
       updateAllProxies();                             // Update all the input data
-      BaseDeviceInterface::refreshAllDevices();      // Refresh all the device interface handles
+      BaseDeviceInterface::refreshAllInterfaces();      // Refresh all the device interface handles
       vprDEBUG(gadgetDBG_INPUT_MGR,vprDBG_VERB_LVL)
          << "InputManager::configRemove(): Updated all data" << std::endl
          << vprDEBUG_FLUSH;
